--- a/vForum/View/Base.lproj/LaunchScreen.storyboard
+++ b/vForum/View/Base.lproj/LaunchScreen.storyboard
@@ -23,7 +23,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.98823529409999999" green="0.96862745100000003" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="jkA-B4-LtB" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.3" id="1d0-bM-zK9"/>
                             <constraint firstItem="jkA-B4-LtB" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="71v-pY-75I"/>
