--- a/vForum/View/SignUpFieldView.xib
+++ b/vForum/View/SignUpFieldView.xib
@@ -10,11 +10,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view userInteractionEnabled="NO" contentMode="scaleToFill" id="iN0-l3-epB" customClass="SignUpField" customModule="vForum" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SignUpField" customModule="vForum" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="342" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wig-km-euK">
+                <view userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wig-km-euK">
                     <rect key="frame" x="0.0" y="58" width="342" height="2"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.85882352939999995" green="0.85098039219999999" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
@@ -33,13 +33,16 @@
                     <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="ffffdfdfdfdfserewcxzcsdfasdsad" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="L8k-oB-c12">
-                    <rect key="frame" x="0.0" y="28" width="342" height="29"/>
+                <textField contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="L8k-oB-c12">
+                    <rect key="frame" x="0.0" y="21" width="342" height="43"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                     <textInputTraits key="textInputTraits" keyboardType="alphabet"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="waf-Fh-DmU"/>
+                        <outlet property="pasteDelegate" destination="-1" id="yJ7-x0-Rvz"/>
+                        <outlet property="textDragDelegate" destination="-1" id="yah-Wd-fyX"/>
+                        <outlet property="textDropDelegate" destination="-1" id="FCS-zo-m5A"/>
                     </connections>
                 </textField>
             </subviews>
@@ -54,7 +57,7 @@
                 <outlet property="TextField" destination="L8k-oB-c12" id="D0o-5n-llS"/>
                 <outlet property="Underline" destination="Wig-km-euK" id="jgZ-PI-tRx"/>
             </connections>
-            <point key="canvasLocation" x="-130.43478260869566" y="151.33928571428569"/>
+            <point key="canvasLocation" x="-130.43478260869566" y="150.66964285714286"/>
         </view>
     </objects>
 </document>
